// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`misc.js 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
css\`a { }\`

md\`\`

graphql(\`{id}\`)

html\`<a>\`

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`]
})
class TestComponent {}

=====================================output=====================================
css\`
  a {
  }
\`;

md\`

\`;

graphql(
  \`
    {
      id
    }
  \`
);

html\`<a></a>\`;

@Component({
  template: \`<a></a>\`,
  styles: [
    \`
      a {
      }
    \`,
  ],
})
class TestComponent {}

================================================================================
`;

exports[`misc.js 2`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
templateFormatting: "off"
                                                                                | printWidth
=====================================input======================================
css\`a { }\`

md\`\`

graphql(\`{id}\`)

html\`<a>\`

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`]
})
class TestComponent {}

=====================================output=====================================
css\`a { }\`;

md\`\`;

graphql(\`{id}\`);

html\`<a>\`;

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`],
})
class TestComponent {}

================================================================================
`;
